# boj-api-client

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: api_overview.md  architecture.md
scripts/: generate_sync_orchestrator.py
src/boj_api_client/: __init__.py  async_client.py  client.py  client_shared.py  config.py
src/boj_api_client/core/: __init__.py  async_checkpoint_store.py  (+12 more)
tests/: __init__.py  conftest.py
tests/contract_live/: README.md  test_live_contract.py
tests/integration/: test_data_layer_partial_boundary.py  test_pipeline_with_fixtures.py  test_transport_status_rules.py
tests/integration_async/: test_async_pipeline_with_fixtures.py  test_sync_async_equivalence.py
tests/shared/: client_fakes.py  fixture_transports.py  payloads.py  transport.py
tests/unit/: test_aggregation.py  test_checkpoint_manager.py  test_checkpoint_store.py  test_checkpoint_store_file.py  test_client.py  test_config.py  test_errors.py  test_fixture_schema.py  test_model_immutability.py  test_module_all_exports.py  test_orchestrator_codegen.py  test_pagination.py  test_params.py  test_parser_models.py  test_planner.py  test_public_exports.py  test_queries_validators.py  test_resilient_service.py  test_response_parsing.py  test_strict_service.py  test_throttling_retry.py  test_transport.py
tests/unit_async/: test_async_checkpoint_manager.py  test_async_checkpoint_store.py  test_async_client.py  test_async_resilient_service.py  test_async_transport.py  test_checkpoint_store_async.py
(+29 files in other folders)
