[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boj-api-client"
version = "0.1.0"
description = "Python client for Bank of Japan timeseries statistics API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  {name = "delihiros", email = "delihiros@gmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<0.29",
]

[project.urls]
Homepage = "https://github.com/delihiros/boj-api-client"
Repository = "https://github.com/delihiros/boj-api-client"
Issues = "https://github.com/delihiros/boj-api-client/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<7",
  "pytest-asyncio>=0.23,<0.25",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "live: live BOJ API contract tests (network dependent)",
]
asyncio_mode = "auto"
